Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46273

QSG_RENDER_LOOP=threaded: HDC changes when application is minimized and restored breaks Windows OpenCL/OpenGL interop

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.0
    • 5.4.0
    • Quick: SceneGraph
    • None
    • Windows 8.1
    • a8410384e3b74b0b057422f7faa1f772b7b38fbf

    Description

      Starting in Qt 5.4.0 OpenGL HDC may change causing artifacts or crashes to Windows applications that use OpenCL and rely on OpenGL/OpenCL Interoperability for improved performance.
      We found that there was a recent change in Qt 5.4.0 SDK in qsgthreadedrenderloop.cpp line 356 that introduced a gl->doneCurrent() causing HDC changes. Removing this on Windows seems to solve the issue. Is it safe to remove? Why was this introduced in 5.4? What does it fix?

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sletta Gunnar Sletta
            ngeorgis Nikos Georgis
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes