Don't doneCurrent() on hide().

This hurts interoperability with OpenCL on windows and the other
renderloops don't do it either, so to be consistent, lets not.

Change-Id: Ie06842957561c8933690633469b8b3a026ff399b
Task-number: QTBUG-46273
Reviewed-by: Laszlo Agocs <laszlo.agocs@theqtcompany.com>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>